Convert examples for W&M

--- a/config.yaml
+++ b/config.yaml
@@ -1,25 +1,19 @@
 interval: 300
 feeds:
-  - id: bbc_world
-    feed_url: http://feeds.bbci.co.uk/news/england/rss.xml
-    name: BBC World
-    gitlab_project_id: 11494338
+  - id: usn
+    feed_url: https://ubuntu.com/security/notices/rss.xml
+    name: Ubuntu Security Notice
+    gitlab_project_id: 2389
     retroactive: true
+    added_since: "2022-04-14T00:00:00Z"
     labels:
-      - BBC
-  - id: gke_release_notes
-    feed_url: https://cloud.google.com/feeds/kubernetes-engine-release-notes.xml
-    name: GKE release notes
-    gitlab_project_id: 11494338
-    added_since: "2019-03-27T15:00:00Z"
+      - Ubuntu
+
+  - id: tomcat
+    feed_url: https://tomcat.markmail.org/atom/+list:org.apache.tomcat.announce
+    name: Tomcat Announcements
+    gitlab_project_id: 2389
+    retroactive: true
+    added_since: "2022-04-14T00:00:00Z"
     labels:
-      - GKEReleaseNotes
-      - Needs/Triage
-  - id: gke_security_updates
-    feed_url: https://cloud.google.com/feeds/kubernetes-engine-security-bulletins.xml
-    name: GKE Security Updates
-    gitlab_project_id: 11494338
-    added_since: "2019-03-27T15:00:00Z"
-    labels:
-      - GKESecurityUpdates
-      - Needs/Triage
+      - Tomcat
